[package]
name = "txoutset"
version = "0.1.0"
authors = ["Clark Moody <clark@clarkmoody.com>"]
repository = "https://github.com/clarkmoody/txoutset"
description = "Parser for the UTXO set dump produced by Bitcoin Core"
keywords = ["bitcoin", "parser", "utxo"]
categories = ["encoding", "cryptography::cryptocurrencies"]
license = "MIT"
edition = "2021"

[dependencies]
bitcoin = "0.31.1"

[workspace]
members = [
    "examples/*"
]
